# Langury

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
generations/eighties1980/: CPlusPlus.h  CommonLisp.cpp  CommonLisp.h  Eiffel.h  Erlang.h  ObjectiveC.h  Perl.h
generations/eighties80/: CPlusPlus.cpp  CPlusPlus.h  CommonLisp.cpp  CommonLisp.h  Eiffel.cpp  Eiffel.h  Erlang.cpp  Erlang.h  ObjectiveC.cpp  ObjectiveC.h  Perl.h
generations/fifties1950/: Algol.cpp  Algol.h  Cobol.cpp  Cobol.h  Fortran.h  Lisp.cpp  Lisp.h
generations/fifties50/: Algol.h  Cobol.h  Fortran.cpp  Fortran.h  Lisp.h
generations/nineties1990/: Delphi.cpp  Delphi.h  Haskell.cpp  Haslell.h  Java.cpp  Java.h  JavaScript.cpp  JavaScript.h  Lua.cpp  Lua.h  OCaml.h  Ocaml.cpp  Php.h  Python.h  R.cpp  R.h  Ruby.h  SuperCollider.cpp  SuperCollider.h  Tcl.h  VisualBasic.cpp  VisualBasic.h
generations/seventies1970/: Ada.h  Awk.cpp  Awk.h  C.h  Forth.cpp  Forth.h  Ml.cpp  Ml.h  Pascal.cpp  Pascal.h  Prolog.cpp  Prolog.h  Scheme.h  SmallTalk.h  Smalltalk.cpp  Smalltalk.h
generations/seventies70/: Ada.h  Awk.h  C.h  Forth.h  Ml.h  Pascal.h  Prolog.h  Scheme.h  SmallTalk.cpp  SmallTalk.h
generations/sixties1960/: B.h  Basic.h  Bcpl.cpp  Bcpl.h  Cpl.cpp  Cpl.h  Logo.cpp  Logo.h  Pl1.cpp  Pl1.h  PlI.cpp  PlI.h  Pli.cpp  Pli.h  Simula.cpp  Simula.h
generations/sixties60/: B.h  Basic.h  Bcpl.h  Cpl.h  Logo.h  Pli.h  Simula.h
newgenerations/tens2010/: Ceylon.cpp  Ceylon.h  Dart.cpp  Dart.h  Elixir.cpp  Elixir.h  Hack.cpp  Hack.h  Rust.cpp  Rust.h  Swift.cpp  Swift.h
(+11 files in other folders)
